Base version of REST API (template)

--- a/REST.API/appsettings.json
+++ b/REST.API/appsettings.json
@@ -4,5 +4,15 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "APIdescription": {
+    "Title": "Szkolenie REST API",
+    "Version": "v1",
+    "Description": "API stworzone na potrzeby przeprowadzenia szkolenia z REST API",
+    "Contact": {
+      "Name": "Adrian Kudlik",
+      "Email": "adrian.kudlik115@gmail.com",
+      "Url": "-"
+    }
+  }
 }
