--- a/REST.API/REST.API.csproj
+++ b/REST.API/REST.API.csproj
@@ -14,6 +14,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+<PackageReference Include="LhsBracketParser" Version="1.0.3" />
+<PackageReference Include="LhsBracketParser.LinqProvider" Version="0.0.1" />
 <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
