--- a/REST.API/REST.API.csproj
+++ b/REST.API/REST.API.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="4.0.1" />
+    <PackageReference Include="WebApiContrib.Core.Formatter.Yaml" Version="2.1.0" />
     </ItemGroup>
 
 </Project>
